--- a/package.json
+++ b/package.json
@@ -1,50 +1,54 @@
 {
-  "name": "likes",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.10.0",
-    "@emotion/styled": "^11.10.0",
-    "@mui/icons-material": "^5.8.4",
-    "@mui/material": "^5.9.3",
-    "@reduxjs/toolkit": "^1.8.3",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.3.0",
-    "@testing-library/user-event": "^14.4.2",
-    "axios": "^0.27.2",
-    "framer-motion": "^7.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-redux": "^8.0.2",
-    "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
-    "redux": "^4.2.0",
-    "redux-persist": "^6.0.0",
-    "redux-thunk": "^2.4.1",
-    "web-vitals": "^2.1.4"
+"homepage":"http://khalilyan.github.io/Likes",
+"name":"likes",
+"version":"0.1.0",
+"private":true,
+
+"dependencies":{
+  "@emotion/react":"^11.10.0",
+  "@emotion/styled":"^11.10.0",
+  "@mui/icons-material":"^5.8.4",
+  "@mui/material":"^5.9.3",
+  "@reduxjs/toolkit":"^1.8.3",
+  "@testing-library/jest-dom":"^5.16.5",
+  "@testing-library/react":"^13.3.0",
+  "@testing-library/user-event":"^14.4.2",
+  "axios":"^0.27.2",
+  "framer-motion":"^7.0.0",
+  "gh-pages":"^4.0.0",
+  "react":"^18.2.0",
+  "react-dom":"^18.2.0",
+  "react-redux":"^8.0.2",
+  "react-router-dom":"^6.3.0",
+  "react-scripts":"5.0.1",
+  "redux":"^4.2.0",
+  "redux-persist":"^6.0.0",
+  "redux-thunk":"^2.4.1",
+  "web-vitals":"^2.1.4"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+  
+  "scripts":{
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start":"react-scripts start",
+  "build":"react-scripts build",
+  "test":"react-scripts test",
+  "eject":"react-scripts eject"
   },
-  "eslintConfig": {
+  "eslintConfig":{
     "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
+    "react-app",
+    "react-app/jest"
+  ]},
+    "browserslist":{
+      "production": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+      ],
+      "development":[
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
-    ]
-  }
-}
+      ]
+    }}
